# usbd

./: .gitignore  LICENSE  README.md
examples/depedencies/: depedencies.cmake
examples/stm32f103/bootloader_dfu/: CMakeLists.txt  CMakePresets.json  stm32f103c8tx_flash.ld  stm32f103rbtx_flash.ld  stm32f103zetx_flash.ld
examples/stm32f103/bootloader_dfu/sources_app/: CMakeLists.txt  flash.c  flash.h  main_app.c  main_usbd_init.c  main_usbd_init.h  std_libs.h  stm32_helper.c  stm32_helper.h  stm32_helper_sdk_extract.c  usbd_cfg.h  usbd_port_stm32_cat_a_board_settings.c  user_app_handle.c  user_app_handle.h
examples/stm32f103/bootloader_dfu/stm32cubemx_generated_stm32f103c8t6_bluepill/: .mxproject  bootloader_dfu_stm32f103c8t6_bluepill.ioc
examples/stm32f103/bootloader_dfu/stm32cubemx_generated_stm32f103rbt6/: .mxproject  bootloader_dfu_stm32f103rbt6.ioc
examples/stm32f103/bootloader_dfu/stm32cubemx_generated_stm32f103zet6/: .mxproject  bootloader_dfu_stm32f103zet6.ioc
examples/stm32f103/common/: call_bootloader.h  iocmd_exe_usart.h  iocmd_exe_vcom.c  iocmd_exe_vcom.h  stm32_usart_init.h
examples/stm32f103/keyboard/: CMakeLists.txt  CMakePresets.json
examples/stm32f103/keyboard/sources_app/: CMakeLists.txt  buff_cfg.h  cfg.h  cmd_line.c  cmd_line.h  iocmd_cfg.h  keyboard.c  keyboard.h  main_app.c  main_usbd_init.c  main_usbd_init.h  os_cfg.h  std_libs.h  usbd_cfg.h  usbd_port_stm32_cat_a_board_settings.c
examples/stm32f103/keyboard/stm32cubemx_generated_stm32f103c8t6_bluepill/: keyboard_stm32f103c8t6_bluepill.ioc
examples/stm32f103/keyboard/stm32cubemx_generated_stm32f103rbt6/: keyboard_stm32f103rbt6.ioc
examples/stm32f103/keyboard/stm32cubemx_generated_stm32f103zet6/: keyboard_stm32f103zet6.ioc
examples/stm32f103/mouse/: CMakeLists.txt  CMakePresets.json  stm32f103c8tx_flash.ld  stm32f103rbtx_flash.ld  stm32f103zetx_flash.ld
examples/stm32f103/mouse/sources_app/: CMakeLists.txt  buff_acfg.h  cmd_line.c  cmd_line.h  exceptions.c  iocmd_cfg.h  iocmd_exe_vcom.c  main_app.c  main_usbd_init.c  main_usbd_init.h  mouse.c  mouse.h  osal_cfg.h  usbd_cfg.h  usbd_port_stm32_cat_a_board_settings.c
examples/stm32f103/mouse/stm32cubemx_generated_stm32f103c8t6_bluepill/: mouse_stm32f103c8t6_bluepill.ioc
examples/stm32f103/mouse/stm32cubemx_generated_stm32f103rbt6/: mouse_stm32f103rbt6.ioc
examples/stm32f103/mouse/stm32cubemx_generated_stm32f103zet6/: mouse_stm32f103zet6.ioc
examples/stm32f103/tripple_vcom/: CMakeLists.txt  CMakePresets.json  Readme.txt  buff_acfg.h  cfg.h  cmd_line.c  exceptions.c  iocmd_cfg.h  iocmd_exe_usart.c  iocmd_exe_vcom.c  main_usbd_init.c  stm32_usart_init.h  stm32f103rbtx_flash.ld  stm32f103zetx_flash.ld  usbd_cfg.h  usbd_port_stm32f103_board_settings.c
examples/stm32f103/tripple_vcom/rbt6/: gpio.h  memconfig.h  usbd_port_stm32f103_board_settings_cfg.h
examples/stm32f103/tripple_vcom/sources_app/: CMakeLists.txt  buff_acfg.h  cfg.h  cmd_line.c  cmd_line.h  exceptions.c  iocmd_cfg.h  iocmd_exe_vcom.c  main.c  main_app.c  main_usbd_init.c  main_usbd_init.h  osal_cbk.c  std_libs.h  stm32_usart_init.c  usbd_cfg.h  usbd_port_stm32_cat_a_board_settings.c  usbd_port_stm32f103_board_settings.c  utils.h
examples/stm32f103/tripple_vcom/sources_app/os/api/: os.h
examples/stm32f103/tripple_vcom/sources_app/os/imp/FreeRTOS/src/: os.c
examples/stm32f103/tripple_vcom/sources_app/rbt6/: memconfig.h  usbd_port_stm32f103_board_settings_cfg.h
examples/stm32f103/tripple_vcom/sources_app/zet6/: memconfig.h  usbd_port_stm32f103_board_settings_cfg.h
examples/stm32f103/tripple_vcom/stm32cubemx_generated_stm32f103c8t6_bluepill/: .mxproject  tripple_vcom_stm32f103c8t6_bluepill.ioc
examples/stm32f103/tripple_vcom/stm32cubemx_generated_stm32f103rbt6/: .mxproject  tripple_vcom_stm32f103rbt6.ioc
examples/stm32f103/tripple_vcom/stm32cubemx_generated_stm32f103rbt6/cmake/: gcc-arm-none-eabi.cmake
examples/stm32f103/tripple_vcom/stm32cubemx_generated_stm32f103zet6/: .mxproject  tripple_vcom_stm32f103rbt6.ioc  tripple_vcom_stm32f103zet6.ioc
examples/stm32f103/tripple_vcom/stm32cubemx_generated_stm32f103zet6/cmake/: gcc-arm-none-eabi.cmake
examples/stm32f103/tripple_vcom/zet6/: gpio.h  usbd_port_stm32f103_board_settings_cfg.h
usbd/: CMakeLists.txt  usbd_lib.cmake
usbd/classes/cdc_vcom/api/: cdc_vcom.h
usbd/classes/dfu/api/: dfu.h
usbd/classes/hid/api/: hid.h
usbd/tests/dev_test/test/: Makefile  cfg.h  dev_test_config_desc.c  dev_test_config_desc.h  dev_test_configs.c  dev_test_configs.h  dev_test_dev_desc.c  dev_test_dev_desc.h  dev_test_states.c  dev_test_states.h  dev_test_strings.c  dev_test_strings.h  main.c  usbd_cfg.h
usbd/tests/event_test/test/: Makefile  cfg.h  events_test_call.c  events_test_call.h  events_test_states.c  events_test_states.h  main.c  usbd_cfg.h  usbd_events_test_install.c  usbd_events_test_install.h  usbdc_events_test_install.c  usbdc_events_test_install.h
usbd/tests/io_test/test/: Makefile  cfg.h  dummy.c  dummy.h  io_test_configure.c  io_test_configure.h  io_test_deconfigure.c  io_test_deconfigure.h  io_test_halt.c  io_test_halt.h  io_test_in_abort.c  io_test_in_abort.h  io_test_out_abort.c  io_test_out_abort.h  io_test_process_in_error_cbi.c  io_test_process_in_error_cbi.h  io_test_process_in_error_iso.c  io_test_process_in_error_iso.h  io_test_process_out_error_cbi.c  io_test_process_out_error_cbi.h  io_test_process_out_error_iso.c  io_test_process_out_error_iso.h  io_test_stall_in.c  io_test_stall_in.h  io_test_stall_out.c  io_test_stall_out.h  io_test_tp_attach.c  io_test_tp_attach.h  main.c  usbd_cfg.h  usbd_preconfig_by_port.h
usbd/tests/iotp_buff_test/iocmd_iotp_test/: Makefile  buff_acfg.h  cfg.h  iotp_test_init.c  iotp_test_init.h  iotp_test_recv_irq_next.c  iotp_test_recv_irq_next.h  iotp_test_recv_ready_irq.c  iotp_test_recv_ready_irq.h  iotp_test_recv_ready_irq_abort_by_reconfigure.c  iotp_test_recv_ready_irq_abort_by_reconfigure.h  iotp_test_recv_ready_irq_abort_by_user.c  iotp_test_recv_ready_irq_abort_by_user.h  (+16 more)
usbd/tests/test_helpers/: iocmd_cfg.h  main_get_exe.c  main_get_exe.h  std_libs.h
(+196 files in other folders)
